--- a/pom.xml
+++ b/pom.xml
@@ -119,12 +119,31 @@
             <version>2.3.8</version>
         </dependency>
 
-        <!--给android用的-->
-        <!-- https://mvnrepository.com/artifact/com.google.protobuf.nano/protobuf-javanano -->
+        <!-- poi -->
         <dependency>
-            <groupId>com.google.protobuf.nano</groupId>
-            <artifactId>protobuf-javanano</artifactId>
-            <version>3.0.0-alpha-7</version>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-examples</artifactId>
+            <version>3.13</version>
         </dependency>
 
 
